Pushdown Donate Banner fix - prevents child margin from collapsing through .main-content-wrapper

--- a/foundation_cms/static/scss/_layout.scss
+++ b/foundation_cms/static/scss/_layout.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 
 .main-content-wrapper {
+  padding-top: 1px; // prevents child margin from collapsing
   background-color: map.get($mofo-colors, white);
 }
